--- a/static/style.css
+++ b/static/style.css
@@ -218,3 +218,18 @@ button#tweet_invite_button {
     padding-top: 5px;
     margin-top: -6px;
 }
+
+div#refer_info_box {
+    height: 100px;
+    background:#FFF6BF;
+    #color:#514721;
+    color:#3333FF;
+    border-color:#FFD324;
+    padding:.8em;
+    margin-bottom:1em;
+    border:2px solid #FFD324;
+    text-align: center;
+    font-size: large;
+    
+}
+
