--- a/static/style.css
+++ b/static/style.css
@@ -258,3 +258,9 @@ li.friend_list_item {
 li:hover {
   background-color: #fd9;
 }
+
+img.checkbox_invite {
+    float: right;
+    padding-right: 20px;
+    padding-top: 5px;
+}
