Modifying the home page to link to create and list.

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,6 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<p>This is home page.</p>
+<p><a class="button" href="/list">Browse Events</a></p>
+<p><a class="button2" href="/create">Create Event</a></p>
 {% endblock %}
