Adding select deselect features.

--- a/static/style.css
+++ b/static/style.css
@@ -107,7 +107,7 @@ div.transbox{
 	border:1px solid #666;	
 	background-color:#FBF5EF;	 
 	width: 700px;
-	height: 410px;
+	height: 430px;
 	padding: 35px;
 
     /* CSS3 styling for latest browsers */	 
@@ -189,6 +189,7 @@ div#twitlist {
     overflow: auto;
     height: 200px;
     width: 100 px;
+    margin: 0 0 0 0;
 }
 
 div#tweet_msg {
@@ -247,12 +248,12 @@ span#friend_name_text {
 }
 
 ul#friend_list {
-    padding: 20px 50px 20px 50px;
+    padding: 0px 20px 2px 20px;
     margin: 0 0 0 0;
 }
 
 li.friend_list_item {
-    padding-bottom: 10px 10px 10px 10px;
+    padding: 2px 2px 2px 2px;
     margin: 0;
     list-style-type:none;
     border-bottom: 2px solid #00CCFF;
@@ -333,4 +334,13 @@ ul.tabs a.current {
 
 a.no_underline {
     text-decoration: none;
+}
+
+a.select_all_arrow {
+    margin: 0 0 0 589px;
+}
+
+hr.horizontal_line {
+    margin: 0;
+    padding: 0;
 }
