--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -78,6 +78,8 @@ You have been Invited by {{refer_user.name}} &nbsp;&nbsp;<img src="{{refer_user.
         <div class="twitterfriends">
           <div id="tweet_title"><input type="text" id="tweet_text" maxlength="140" size="45"></input><button id="tweet_invite_button">Tweet Invite</button></div>
           <div id="tweet_msg"></div>
+	  <a href="#" class="select_all_arrow"><img class="select_all_arrow" src="/site_media/images/arrow-down.gif"></img></a>
+	  <hr  class="horizontal_line "/>
           <div id="twitlist"><img src="/site_media/images/ajax_loader.gif" /></div>
         </div>
         
@@ -276,6 +278,25 @@ $(function() {
     $("ul.tabs").tabs("div.panes > div");
 });
 
+
+function setup_select_all_button() {
+    $("a.select_all_arrow").toggle(function() {
+       $(".friend_list_item").each(function(index) {
+                $(this).css("background-color", "#FF9933");    
+                $(this).find("input[name='invitee']").attr("checked", "yes");
+                $(this).find("img.checkbox_invite").attr("src", "/site_media/images/checkbox_checked.png");
+            });
+    }, 
+    function() {
+        $(".friend_list_item").each(function(index) {
+                $(this).css("background-color", "#FBF5EF");    
+                $(this).find("input[name='invitee']").removeAttr("checked");
+                $(this).find("img.checkbox_invite").attr("src", "/site_media/images/checkbox_unchecked.png");
+        });
+    });
+
+}
+
 function display_friends_invite() {
             $.ajax({
                     url: '/ajax/event_friend_not_attendees/{{event.id}}', 
@@ -306,6 +327,7 @@ function display_friends_invite() {
                                    $(this).find("input[name='invitee']").removeAttr("checked");
                                    $(this).find("img.checkbox_invite").attr("src", "/site_media/images/checkbox_unchecked.png");
                                });
+                               setup_select_all_button(); 
 	                       
 	        	     },
                     beforeSend: function() {
