--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -142,7 +142,7 @@ You have been Invited by {{refer_user.name}} &nbsp;&nbsp;<img src="{{refer_user.
   </div>
   <div id="details">
     {{event.venue}}, {{event.venue_address}}
-    <a id="show_map" class="button no_underline" href="#"></a>
+    <br/><a id="show_map" class="button no_underline" href="#"></a>
     <br />{{event.time}} 
   </div>
 </div>
@@ -200,7 +200,7 @@ $(document).ready(function() {
 						},
 					onLoad: function(event) {
                                                 $("#tweet_msg").html("");
-                                                $("#tweet_text").val("TEST: Dicounted Invite to my Friends.");
+                                                $("#tweet_text").val("TEST: Discounted Invite to my Friends.");
                                                 $("#tweet_invite_button").removeAttr("disabled");
 						display_friends_invite();
                                                                                                 
