--- a/templates/create.html
+++ b/templates/create.html
@@ -49,7 +49,7 @@
     </li>
 
     <li>
-		<label for="event_capacity">Event Capacity:</label> <input type="text" class="digits" name="event_capacity" />
+		<label for="event_capacity">Target # of Invites:</label> <input type="text" class="digits" name="event_capacity" />
 	</li>
 	
     <li>
@@ -68,6 +68,9 @@
 	
     <li>
 		<label for="event_price">Event Price:</label> <input type="text" class="number" name="event_price" />
+	</li>
+<li>
+		<label for="event_discount">Early Bird Discounted Price:</label> <input type="text" class="number" name="event_discount" />
 	</li>
 	
     <li>
