--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -242,7 +242,7 @@ $(document).ready(function() {
 
 	if (GBrowserIsCompatible()) {
 	    var map = new GMap2(document.getElementById("visual_map"));
-	    map.setCenter(new GLatLng(37.4419, -122.1419), 13);
+	    map.setCenter(new GLatLng({{event.lat}}, {{event.lng}}), 13);
 	    map.setUIToDefault();
 	}			
 
@@ -257,7 +257,7 @@ $(document).ready(function() {
 			   
 			    if (GBrowserIsCompatible()) {
 				var map = new GMap2(document.getElementById("visual_map"));
-				map.setCenter(new GLatLng(37.4419, -122.1419), 13);
+				map.setCenter(new GLatLng({{event.lat}}, {{event.lng}}), 13);
 				map.setUIToDefault();
 			    }
 			});
