--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,12 @@
-<br />
-<ul> 
-  <li><a href="/">Home</a></li> 
-      <li><a href="/about">About</a></li> 
-      <li><a href="http://twitter.com/datamarketplace">Twitter</a></li> 
-      <li><a href="/feedbacks/new" class="feedbackLink">Contact</a></li> 
-      <li><a href="/privacy">Legal</a></li> 
-</ul>
-<br />
-@Copyright SocialBite 2010.
-<br />
+</div>
+<!--END main -->
+</div>	
+	<!-- END content -->
+</div>
+<!-- END main -->
+<div id="footer">
+	<p>Copyright 2010 Simpz Inc. All rights reserved.</p>
+</div>
+<!-- END footer -->
+</body>
+</html>
