Addign some css fixes.

--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -26,7 +26,7 @@
 	<div id="header_msg" class="quiet"><font size = 4.5em>You are planning to go to this event.</font></div>
 	<BR>
 	  
-	<input id="not_going_button" type="submit" class="button" value="Can't make it :(" > &nbsp; &nbsp;
+	<input id="not_going_button" type="submit" class="button" value="Can't make it" > &nbsp; &nbsp;
 	<button href="#" id="invite_button" class="button2" rel="#invite_popup">Invite Friends!</button>
 	
 	  
