--- a/static/style.css
+++ b/static/style.css
@@ -10,10 +10,11 @@ div.top_login{
 	margin-bottom:1em;
 	border:2px solid #FFD324;
 	color: #514721;
+	width: 430px;
 }
 
 h1#header_invite {
-	font-size: 16px;
+    font-size: 16px;
     color: #9CB926;
     border-style:solid;
     border-color:#DDDDDD #CCCCCC #CCCCCC #DDDDDD;
@@ -360,10 +361,12 @@ div#address_map {
 
 div#description_box {
     height: 60px;
-    width: 470px;
+    width: 446px;
     background-color: #FFF6BF;
     border:1px solid #FFD324;
     text-align: center;
     font-size: 1.5em;
     overflow: auto;
+    padding: .8em;
+
 }
