--- a/static/style.css
+++ b/static/style.css
@@ -65,8 +65,9 @@ text-shadow:2px 2px #666;
 	font-size: 1.8em;
 	padding-right: 20px;
 }
-.attending{
+div.attending{
 	font-size: 1.2em;
+	overflow: auto;
 }
 #title{
 	font-size: 3em;
